Version 0.5-0
=============
- We use weights instead of direct alpha allocation in the graphs.
  This causes major API changes:
  - gMCP and many other functions have an argument alpha with default 0.05
  - getAlpha is now called getWeights since it returns the weights
  - graph2weights is removed since it is a special case of getWeights
- due to these changes above, graphs that have been saved to files will cause errors when loaded and processed
- getX/Y were renamed into getX/YCoordinates due to Rgraphviz conflicts.
- new function bdiagNA for building block diagonal matrices with NA values outside the diagonal
- Backward compatibility for R 2.8.0 and rJava 0.6-3.
- CTRL+C interrupts only the last R command and does not close the whole R session.
- CRAN has disabled checks on arch="ppc", so MacOS builds are (hopefully) again available from CRAN.
- Bug report sends now also the result from traceback()
- A lot of bug fixes for corner and edge cases
- Please note that full epsilon support is postponed for version 0.6-0 

Version 0.4-0 (21-Mar-2011)
=============
- Added code for graph based MCPs with partial knowledge of the correlation structure from Florian Klinglmueller, who is now coauthor.
- New dependencies in this code: gtools and multcomp (and therefore also mvtnorm)
- gMCP has a new optional parameter "correlation".
- The new vignette "correlated.pdf" shows the new features.
- graphGUI Parameter grid is now 0 by default. This restores the last used grid value.
- Fractions instead of decimal numbers are shown in more places.
- Alpha values can be entered as R expression, e.g. "0.05/7".
- When the test phase is started in the GUI, you are asked, whether you have (partial) knowledge about the correlations between the tests.
- Better support for more than one GUI window in the same R session.
- All help files open correctly on windows machines - even with Java 5.0

Version 0.3-6 (15-Mar-2011)
=============