@@ -65,3 +65,12 @@
     Pages = "to appear",
     Year = 2011 
 }
+
+@Article{ Holm79,
+    Author= {{S.} Holm},
+    Year = {1979},
+    Title = {A simple sequentially rejective multiple test procedure.},
+    Journal = {Scand. J. Statist.},
+    Volume = {6},
+    Pages = {65--70}
+}
